clang/test/BSC/Negative/OwnedStruct/destructor/destructor_when_reassign_to_sub_fields/destructor_when_reassign_to_sub_fields.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A{
};
_Owned struct B{
    public:
    A a;
};
_Owned struct C{
    public:
    A a;
    B b;
};

int main(){
    A a1 = {};
    A a2 = {};
    A a3= {};
    A a4= {};
    B b1 ={.a=a1};
    B b2 ={.a=a2};
    C c1 = {.a=a3,.b=b1};
    c1.b = b2;// expected-error {{assign to part of _Owned value: `c1.b`}}
    return 0;
}

